--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>คำนวณระดับการให้บริการ (LOS)</title>
+    <title>คำนวณระดับการให้บริการ (LOS) กรณี 2 ช่องจราจร </title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -42,7 +42,7 @@
     <div id="result"></div>
 
     <p style="margin-top: 20px; font-size: 12px; color: gray; text-align: center;">
-        ที่มา HCM 2020 จัดทำโดย นางสาวสุลัดดา ทรัพย์สิน วิศวกรโยธาชำนาญการพิเศษ กลุ่มวางแผนดำเนินงาน สำนักแผนงาน
+        ที่มา Highway Capacity Manual 2000  จัดทำโดย นางสาวสุลัดดา ทรัพย์สิน วิศวกรโยธาชำนาญการพิเศษ กลุ่มวางแผนดำเนินงาน สำนักแผนงาน
     </p>
 
     <script>
