--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="result"></div>
 
     <p style="margin-top: 20px; font-size: 12px; color: gray; text-align: center;">
-        ที่มา Highway Capacity Manual 2000 จัดทำโดย นางสาวสุลัดดา ทรัพย์สิน วิศวกรโยธาชำนาญการพิเศษ กลุ่มวางแผนดำเนินงาน สำนักแผนงาน
+        ที่มา Highway Capacity Manual 2000 จัดทำโดย นางสาวสุลัดดา ทรัพย์สิน และนายทรรศวรรษ ฉันสุธรรม กลุ่มวางแผนดำเนินงาน สำนักแผนงาน
     </p>
 
     <script>
